compiler/test-data/parser/errors/syntax_errors/missing_brace.error.txt
Parse error:  --> 4:5
  |
4 |     text { "Hello" }
  |     ^---
  |
  = expected param_list